crates/harnizator-tui/tests/snapshots/screens__approval_modal_80x24.snap
---
source: crates/harnizator-tui/tests/screens.rs
expression: "render(&s, 80, 24)"
---
" harnizator │ anthropic/claude-test │ full-access │ ↑0 ↓0  gerando… Esc cancela "
"[sys]                                                                           "
"Harnizator — Enter envia · Esc cancela geração · Ctrl+C sai                     "
"                                                                                "
"[you]                                                                           "
"clean up                                                                        "
"                                                                                "
"[tool]       ┌ aprovação necessária ─────────────────────────────┐              "
"▶ bash {"comm│tool: bash                                         │              "
"             │                                                   │              "
"             │{  "command": "rm -rf target/"}                    │              "
"             │                                                   │              "
"             │full-access: aprovação interativa obrigatória      │              "
"             │                                                   │              "
"             │[y] aprovar   [a] aprovar+allowlist   [n/Esc] negar│              "
"             └───────────────────────────────────────────────────┘              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌input (gerando…)──────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
