crates/harnizator-tui/tests/snapshots/screens__empty_chat_80x24.snap
---
source: crates/harnizator-tui/tests/screens.rs
expression: "render(&s, 80, 24)"
---
" harnizator │ anthropic/claude-test │ only-flagged │ ↑0 ↓0 Enter envia · Tab tel"
"[sys]                                                                           "
"Harnizator — Enter envia · Esc cancela geração · Ctrl+C sai                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌input─────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
