crates/harnizator-tui/tests/snapshots/screens__streaming_chat_80x24.snap
---
source: crates/harnizator-tui/tests/screens.rs
expression: "render(&s, 80, 24)"
---
" harnizator │ anthropic/claude-test │ only-flagged │ ↑0 ↓0 gerando… Esc cancela "
"[sys]                                                                           "
"Harnizator — Enter envia · Esc cancela geração · Ctrl+C sai                     "
"                                                                                "
"[you]                                                                           "
"how do I exit vim?                                                              "
"                                                                                "
"[assistant]                                                                     "
"Press Esc then :q!                                                              "
"                                                                                "
"▌                                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌input (gerando…)──────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
